// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test input clear 1`] = `
"<div class="var-input-decorator var-input-decorator--standard var--decorator var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-146">
    <div class="var-input-decorator__controller var--box">
      <div class="var-input-decorator__icon"></div>
      <div class="var-input-decorator__wrap">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-146" type="text">
        <div class="var--ellipsis var-input-decorator__placeholder var-input-decorator--placeholder-hint"></div>
      </div>
      <div class="var-input-decorator__icon"><i class="var-icon var-icon--set var-icon-close-circle var-input-decorator__clear-icon" style="transition-duration: 0ms;" var-input-decorator-cover=""></i></div>
    </div>
    <div class="var-input-decorator__line">
      <div class="var-input-decorator__dot"></div>
    </div>
  </label>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input events test input focus & blur 1`] = `
"<div class="var-input-decorator var-input-decorator--standard var--decorator var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-114">
    <div class="var-input-decorator__controller var--box var-input-decorator--focus">
      <div class="var-input-decorator__icon"></div>
      <div class="var-input-decorator__wrap">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-114" type="text">
        <div class="var--ellipsis var-input-decorator--focus var-input-decorator__placeholder var-input-decorator--placeholder-hint"></div>
      </div>
      <div class="var-input-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-input-decorator__line">
      <div class="var-input-decorator__dot var-input-decorator--line-focus"></div>
    </div>
  </label>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input events test input focus & blur 2`] = `
"<div class="var-input-decorator var-input-decorator--standard var--decorator var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-114">
    <div class="var-input-decorator__controller var--box">
      <div class="var-input-decorator__icon"></div>
      <div class="var-input-decorator__wrap">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-114" type="text">
        <div class="var--ellipsis var-input-decorator__placeholder"></div>
      </div>
      <div class="var-input-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-input-decorator__line">
      <div class="var-input-decorator__dot"></div>
    </div>
  </label>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input events test input focus & blur 3`] = `
"<div class="var-input-decorator var-input-decorator--standard var--decorator var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-119">
    <div class="var-input-decorator__controller var--box var-input-decorator--focus">
      <div class="var-input-decorator__icon"></div>
      <div class="var-input-decorator__wrap">
        <!--v-if--><textarea class="var-input__input var-input--textarea" autocomplete="new-password" id="var-input-119" type="text" rows="8" style="resize: none;">
    </textarea>
        <div class="var--ellipsis var-input-decorator--focus var-input-decorator__placeholder var-input-decorator--placeholder-hint var-input-decorator__placeholder-textarea"></div>
      </div>
      <div class="var-input-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-input-decorator__line">
      <div class="var-input-decorator__dot var-input-decorator--line-focus"></div>
    </div>
  </label>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input events test input focus & blur 4`] = `
"<div class="var-input-decorator var-input-decorator--standard var--decorator var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-119">
    <div class="var-input-decorator__controller var--box">
      <div class="var-input-decorator__icon"></div>
      <div class="var-input-decorator__wrap">
        <!--v-if--><textarea class="var-input__input var-input--textarea" autocomplete="new-password" id="var-input-119" type="text" rows="8" style="resize: none;">
    </textarea>
        <div class="var--ellipsis var-input-decorator__placeholder var-input-decorator__placeholder-textarea"></div>
      </div>
      <div class="var-input-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-input-decorator__line">
      <div class="var-input-decorator__dot"></div>
    </div>
  </label>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input example 1`] = `
"<div class="app-type pb">基本使用</div>
<div class="pb">
  <div class="var-input-decorator var-input-decorator--standard var--decorator var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-3">
      <div class="var-input-decorator__controller var--box">
        <div class="var-input-decorator__icon"></div>
        <div class="var-input-decorator__wrap">
          <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-3" type="text">
          <div class="var--ellipsis var-input-decorator__placeholder">请输入文本</div>
        </div>
        <div class="var-input-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-input-decorator__line">
        <div class="var-input-decorator__dot"></div>
      </div>
    </label>
    <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class="pb">
  <div class="var-input-decorator var-input-decorator--outlined var--decorator var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-7">
      <div class="var-input-decorator__controller var--box">
        <div class="var-input-decorator__icon"></div>
        <div class="var-input-decorator__wrap">
          <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-7" type="text">
          <div class="var--ellipsis var-input-decorator__placeholder">请输入文本</div>
        </div>
        <div class="var-input-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-input-decorator__line">
        <div class="var-input-decorator__line-start var--box"></div>
        <div class="var-input-decorator__line-notch var--box">
          <div class="var--ellipsis var-input-decorator__line-placeholder">请输入文本</div>
        </div>
        <div class="var-input-decorator__line-end var--box"></div>
      </div>
    </label>
    <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class="app-type pb">小尺寸</div>
<div class="pb">
  <div class="var-input-decorator var-input-decorator--standard var-input-decorator--small var--decorator var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-12">
      <div class="var-input-decorator__controller var--box">
        <div class="var-input-decorator__icon"></div>
        <div class="var-input-decorator__wrap">
          <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-12" type="text">
          <div class="var--ellipsis var-input-decorator__placeholder">请输入文本</div>
        </div>
        <div class="var-input-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-input-decorator__line">
        <div class="var-input-decorator__dot"></div>
      </div>
    </label>
    <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class="pb">
  <div class="var-input-decorator var-input-decorator--outlined var-input-decorator--small var--decorator var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-16">
      <div class="var-input-decorator__controller var--box">
        <div class="var-input-decorator__icon"></div>
        <div class="var-input-decorator__wrap">
          <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-16" type="text">
          <div class="var--ellipsis var-input-decorator__placeholder">请输入文本</div>
        </div>
        <div class="var-input-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-input-decorator__line">
        <div class="var-input-decorator__line-start var--box"></div>
        <div class="var-input-decorator__line-notch var--box">
          <div class="var--ellipsis var-input-decorator__line-placeholder">请输入文本</div>
        </div>
        <div class="var-input-decorator__line-end var--box"></div>
      </div>
    </label>
    <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class="app-type pb">朴素模式</div>
<div class="pb">
  <div class="var-input-decorator var-input-decorator--standard var--decorator var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-21">
      <div class="var-input-decorator__controller var--box">
        <div class="var-input-decorator__icon var-input-decorator--non-hint"></div>
        <div class="var-input-decorator__wrap var-input-decorator--wrap-non-hint">
          <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-21" type="text">
          <div class="var--ellipsis var-input-decorator__placeholder var-input-decorator--placeholder-non-hint">请输入文本</div>
        </div>
        <div class="var-input-decorator__icon var-input-decorator--non-hint">
          <!--v-if-->
        </div>
      </div>
      <!--v-if-->
    </label>
    <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class="app-type pb">文本域</div>
<div class="pb">
  <div class="var-input-decorator var-input-decorator--standard var--decorator var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-26">
      <div class="var-input-decorator__controller var--box">
        <div class="var-input-decorator__icon"></div>
        <div class="var-input-decorator__wrap">
          <!--v-if--><textarea class="var-input__input var-input--textarea" autocomplete="new-password" id="var-input-26" type="text" rows="8" style="resize: none;">
    </textarea>
          <div class="var--ellipsis var-input-decorator__placeholder var-input-decorator__placeholder-textarea">请输入文本</div>
        </div>
        <div class="var-input-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-input-decorator__line">
        <div class="var-input-decorator__dot"></div>
      </div>
    </label>
    <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class="pb">
  <div class="var-input-decorator var-input-decorator--outlined var--decorator var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-30">
      <div class="var-input-decorator__controller var--box">
        <div class="var-input-decorator__icon"></div>
        <div class="var-input-decorator__wrap">
          <!--v-if--><textarea class="var-input__input var-input--textarea" autocomplete="new-password" id="var-input-30" type="text" rows="8" style="resize: none;">
    </textarea>
          <div class="var--ellipsis var-input-decorator__placeholder var-input-decorator__placeholder-textarea">请输入文本</div>
        </div>
        <div class="var-input-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-input-decorator__line">
        <div class="var-input-decorator__line-start var--box"></div>
        <div class="var-input-decorator__line-notch var--box">
          <div class="var--ellipsis var-input-decorator__line-placeholder">请输入文本</div>
        </div>
        <div class="var-input-decorator__line-end var--box"></div>
      </div>
    </label>
    <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class="app-type pb">最大长度</div>
<div class="pb">
  <div class="var-input-decorator var-input-decorator--standard var--decorator var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-35">
      <div class="var-input-decorator__controller var--box">
        <div class="var-input-decorator__icon"></div>
        <div class="var-input-decorator__wrap">
          <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-35" type="text" maxlength="10">
          <div class="var--ellipsis var-input-decorator__placeholder">请输入文本</div>
        </div>
        <div class="var-input-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-input-decorator__line">
        <div class="var-input-decorator__dot"></div>
      </div>
    </label>
    <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
      <div class="var-form-details">
        <div class="var-form-details__error-message">
          <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
            <!--v-if-->
          </transition-stub>
        </div>
        <div class="var-form-details__extra-message">
          <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
            <div>0 / 10</div>
          </transition-stub>
        </div>
      </div>
    </transition-stub>
  </div>
</div>
<div class="pb">
  <div class="var-input-decorator var-input-decorator--outlined var--decorator var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-41">
      <div class="var-input-decorator__controller var--box">
        <div class="var-input-decorator__icon"></div>
        <div class="var-input-decorator__wrap">
          <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-41" type="text" maxlength="10">
          <div class="var--ellipsis var-input-decorator__placeholder">请输入文本</div>
        </div>
        <div class="var-input-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-input-decorator__line">
        <div class="var-input-decorator__line-start var--box"></div>
        <div class="var-input-decorator__line-notch var--box">
          <div class="var--ellipsis var-input-decorator__line-placeholder">请输入文本</div>
        </div>
        <div class="var-input-decorator__line-end var--box"></div>
      </div>
    </label>
    <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
      <div class="var-form-details">
        <div class="var-form-details__error-message">
          <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
            <!--v-if-->
          </transition-stub>
        </div>
        <div class="var-form-details__extra-message">
          <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
            <div>0 / 10</div>
          </transition-stub>
        </div>
      </div>
    </transition-stub>
  </div>
</div>
<div class="app-type pb">禁用</div>
<div class="pb">
  <div class="var-input-decorator var-input-decorator--standard var--decorator var-input-decorator--disabled var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-48">
      <div class="var-input-decorator__controller var--box var-input-decorator--disabled">
        <div class="var-input-decorator__icon"></div>
        <div class="var-input-decorator__wrap">
          <!--v-if--><input class="var-input__input var-input--disabled" autocomplete="new-password" id="var-input-48" disabled="" type="text">
          <div class="var--ellipsis var-input-decorator--disabled var-input-decorator__placeholder">请输入文本</div>
        </div>
        <div class="var-input-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-input-decorator__line var-input-decorator--line-disabled">
        <div class="var-input-decorator__dot var-input-decorator--line-disabled"></div>
      </div>
    </label>
    <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class="pb">
  <div class="var-input-decorator var-input-decorator--outlined var--decorator var-input-decorator--disabled var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-52">
      <div class="var-input-decorator__controller var--box var-input-decorator--disabled">
        <div class="var-input-decorator__icon"></div>
        <div class="var-input-decorator__wrap">
          <!--v-if--><input class="var-input__input var-input--disabled" autocomplete="new-password" id="var-input-52" disabled="" type="text">
          <div class="var--ellipsis var-input-decorator--disabled var-input-decorator__placeholder">请输入文本</div>
        </div>
        <div class="var-input-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-input-decorator__line var-input-decorator--line-disabled">
        <!--v-if-->
      </div>
    </label>
    <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class="app-type pb">只读</div>
<div class="pb">
  <div class="var-input-decorator var-input-decorator--standard var--decorator var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-57">
      <div class="var-input-decorator__controller var--box">
        <div class="var-input-decorator__icon"></div>
        <div class="var-input-decorator__wrap">
          <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-57" disabled="" type="text">
          <div class="var--ellipsis var-input-decorator__placeholder">请输入文本</div>
        </div>
        <div class="var-input-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-input-decorator__line">
        <div class="var-input-decorator__dot"></div>
      </div>
    </label>
    <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class="pb">
  <div class="var-input-decorator var-input-decorator--outlined var--decorator var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-61">
      <div class="var-input-decorator__controller var--box">
        <div class="var-input-decorator__icon"></div>
        <div class="var-input-decorator__wrap">
          <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-61" disabled="" type="text">
          <div class="var--ellipsis var-input-decorator__placeholder">请输入文本</div>
        </div>
        <div class="var-input-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-input-decorator__line">
        <div class="var-input-decorator__line-start var--box"></div>
        <div class="var-input-decorator__line-notch var--box">
          <div class="var--ellipsis var-input-decorator__line-placeholder">请输入文本</div>
        </div>
        <div class="var-input-decorator__line-end var--box"></div>
      </div>
    </label>
    <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class="app-type pb">可清除</div>
<div class="pb">
  <div class="var-input-decorator var-input-decorator--standard var--decorator var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-66">
      <div class="var-input-decorator__controller var--box">
        <div class="var-input-decorator__icon"></div>
        <div class="var-input-decorator__wrap">
          <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-66" type="text">
          <div class="var--ellipsis var-input-decorator__placeholder var-input-decorator--placeholder-hint">请输入文本</div>
        </div>
        <div class="var-input-decorator__icon"><i class="var-icon var-icon--set var-icon-close-circle var-input-decorator__clear-icon" style="transition-duration: 0ms;" var-input-decorator-cover=""></i></div>
      </div>
      <div class="var-input-decorator__line">
        <div class="var-input-decorator__dot"></div>
      </div>
    </label>
    <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class="pb">
  <div class="var-input-decorator var-input-decorator--outlined var--decorator var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-71">
      <div class="var-input-decorator__controller var--box">
        <div class="var-input-decorator__icon"></div>
        <div class="var-input-decorator__wrap">
          <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-71" type="text">
          <div class="var--ellipsis var-input-decorator__placeholder var-input-decorator--placeholder-hint">请输入文本</div>
        </div>
        <div class="var-input-decorator__icon"><i class="var-icon var-icon--set var-icon-close-circle var-input-decorator__clear-icon" style="transition-duration: 0ms;" var-input-decorator-cover=""></i></div>
      </div>
      <div class="var-input-decorator__line">
        <div class="var-input-decorator__line-start var--box"></div>
        <div class="var-input-decorator__line-notch var--box var-input-decorator__line-notch--hint">
          <div class="var--ellipsis var-input-decorator__line-placeholder">请输入文本</div>
        </div>
        <div class="var-input-decorator__line-end var--box"></div>
      </div>
    </label>
    <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class="app-type pb">显示图标</div>
<div class="pb">
  <div class="var-input-decorator var-input-decorator--standard var--decorator var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-77">
      <div class="var-input-decorator__controller var--box">
        <div class="var-input-decorator__icon"><i class="var-icon var-icon--set var-icon-plus prepend-icon" style="transition-duration: 0ms;"></i></div>
        <div class="var-input-decorator__wrap">
          <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-77" type="text">
          <div class="var--ellipsis var-input-decorator__placeholder">请输入文本</div>
        </div>
        <div class="var-input-decorator__icon"><i class="var-icon var-icon--set var-icon-minus append-icon" style="transition-duration: 0ms;"></i></div>
      </div>
      <div class="var-input-decorator__line">
        <div class="var-input-decorator__dot"></div>
      </div>
    </label>
    <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class="pb">
  <div class="var-input-decorator var-input-decorator--outlined var--decorator var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-83">
      <div class="var-input-decorator__controller var--box">
        <div class="var-input-decorator__icon"><i class="var-icon var-icon--set var-icon-plus prepend-icon" style="transition-duration: 0ms;"></i></div>
        <div class="var-input-decorator__wrap">
          <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-83" type="text">
          <div class="var--ellipsis var-input-decorator__placeholder">请输入文本</div>
        </div>
        <div class="var-input-decorator__icon"><i class="var-icon var-icon--set var-icon-minus append-icon" style="transition-duration: 0ms;"></i></div>
      </div>
      <div class="var-input-decorator__line">
        <div class="var-input-decorator__line-start var--box"></div>
        <div class="var-input-decorator__line-notch var--box">
          <div class="var--ellipsis var-input-decorator__line-placeholder">请输入文本</div>
        </div>
        <div class="var-input-decorator__line-end var--box"></div>
      </div>
    </label>
    <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class="app-type">字段校验</div>
<div class="pb">
  <div class="var-input-decorator var-input-decorator--standard var--decorator var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-90">
      <div class="var-input-decorator__controller var--box">
        <div class="var-input-decorator__icon"></div>
        <div class="var-input-decorator__wrap">
          <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-90" type="text">
          <div class="var--ellipsis var-input-decorator__placeholder">请输入文本</div>
        </div>
        <div class="var-input-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-input-decorator__line">
        <div class="var-input-decorator__dot"></div>
      </div>
    </label>
    <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div>
  <div class="var-input-decorator var-input-decorator--outlined var--decorator var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-94">
      <div class="var-input-decorator__controller var--box">
        <div class="var-input-decorator__icon"></div>
        <div class="var-input-decorator__wrap">
          <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-94" type="text">
          <div class="var--ellipsis var-input-decorator__placeholder">请输入文本</div>
        </div>
        <div class="var-input-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-input-decorator__line">
        <div class="var-input-decorator__line-start var--box"></div>
        <div class="var-input-decorator__line-notch var--box">
          <div class="var--ellipsis var-input-decorator__line-placeholder">请输入文本</div>
        </div>
        <div class="var-input-decorator__line-end var--box"></div>
      </div>
    </label>
    <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div style="height: 40px;"></div>"
`;

exports[`test input hint to be false 1`] = `
"<div class="var-input-decorator var-input-decorator--standard var--decorator var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-141">
    <div class="var-input-decorator__controller var--box">
      <div class="var-input-decorator__icon var-input-decorator--non-hint"></div>
      <div class="var-input-decorator__wrap var-input-decorator--wrap-non-hint">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-141" type="text">
        <div class="var--ellipsis var-input-decorator__placeholder var-input-decorator--placeholder-hidden var-input-decorator--placeholder-non-hint"></div>
      </div>
      <div class="var-input-decorator__icon var-input-decorator--non-hint">
        <!--v-if-->
      </div>
    </div>
    <div class="var-input-decorator__line">
      <div class="var-input-decorator__dot"></div>
    </div>
  </label>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input maxlength 1`] = `
"<div class="var-input-decorator var-input-decorator--standard var--decorator var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-134">
    <div class="var-input-decorator__controller var--box">
      <div class="var-input-decorator__icon"></div>
      <div class="var-input-decorator__wrap">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-134" type="text" maxlength="100">
        <div class="var--ellipsis var-input-decorator__placeholder var-input-decorator--placeholder-hint"></div>
      </div>
      <div class="var-input-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-input-decorator__line">
      <div class="var-input-decorator__dot"></div>
    </div>
  </label>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <div class="var-form-details">
      <div class="var-form-details__error-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <!--v-if-->
        </transition-stub>
      </div>
      <div class="var-form-details__extra-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <div>4/100</div>
        </transition-stub>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`test input size 1`] = `
"<div class="var-input-decorator var-input-decorator--standard var-input-decorator--small var--decorator var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-109">
    <div class="var-input-decorator__controller var--box">
      <div class="var-input-decorator__icon"></div>
      <div class="var-input-decorator__wrap">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-109" type="text">
        <div class="var--ellipsis var-input-decorator__placeholder var-input-decorator--placeholder-hint"></div>
      </div>
      <div class="var-input-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-input-decorator__line">
      <div class="var-input-decorator__dot"></div>
    </div>
  </label>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input validation 1`] = `
"<div class="var-input-decorator var-input-decorator--standard var--decorator var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-164">
    <div class="var-input-decorator__controller var--box var-input-decorator--error">
      <div class="var-input-decorator__icon"></div>
      <div class="var-input-decorator__wrap">
        <!--v-if--><input class="var-input__input var-input--caret-error" autocomplete="new-password" id="var-input-164" type="text">
        <div class="var--ellipsis var-input-decorator--error var-input-decorator__placeholder var-input-decorator--placeholder-hint"></div>
      </div>
      <div class="var-input-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-input-decorator__line var-input-decorator--line-error">
      <div class="var-input-decorator__dot var-input-decorator--line-error"></div>
    </div>
  </label>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <div class="var-form-details">
      <div class="var-form-details__error-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <div>长度必须大于3</div>
        </transition-stub>
      </div>
      <div class="var-form-details__extra-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <!--v-if-->
        </transition-stub>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`test input validation 2`] = `
"<div class="var-input-decorator var-input-decorator--standard var--decorator var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-164">
    <div class="var-input-decorator__controller var--box">
      <div class="var-input-decorator__icon"></div>
      <div class="var-input-decorator__wrap">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-164" type="text">
        <div class="var--ellipsis var-input-decorator__placeholder"></div>
      </div>
      <div class="var-input-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-input-decorator__line">
      <div class="var-input-decorator__dot"></div>
    </div>
  </label>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input validation 3`] = `
"<div class="var-input-decorator var-input-decorator--standard var--decorator var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-164">
    <div class="var-input-decorator__controller var--box">
      <div class="var-input-decorator__icon"></div>
      <div class="var-input-decorator__wrap">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-164" type="text">
        <div class="var--ellipsis var-input-decorator__placeholder var-input-decorator--placeholder-hint"></div>
      </div>
      <div class="var-input-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-input-decorator__line">
      <div class="var-input-decorator__dot"></div>
    </div>
  </label>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input variant 1`] = `
"<div class="var-input-decorator var-input-decorator--standard var--decorator var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-99">
    <div class="var-input-decorator__controller var--box">
      <div class="var-input-decorator__icon"></div>
      <div class="var-input-decorator__wrap">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-99" type="text">
        <div class="var--ellipsis var-input-decorator__placeholder var-input-decorator--placeholder-hint"></div>
      </div>
      <div class="var-input-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-input-decorator__line">
      <div class="var-input-decorator__dot"></div>
    </div>
  </label>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input variant 2`] = `
"<div class="var-input-decorator var-input-decorator--outlined var--decorator var-input"><label class="var-input-decorator__label var--relative var--block" for="var-input-104">
    <div class="var-input-decorator__controller var--box">
      <div class="var-input-decorator__icon"></div>
      <div class="var-input-decorator__wrap">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-104" type="text">
        <div class="var--ellipsis var-input-decorator__placeholder var-input-decorator--placeholder-hint"></div>
      </div>
      <div class="var-input-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-input-decorator__line">
      <div class="var-input-decorator__line-start var--box"></div>
      <div class="var-input-decorator__line-notch var--box var-input-decorator__line-notch--hint">
        <div class="var--ellipsis var-input-decorator__line-placeholder"></div>
      </div>
      <div class="var-input-decorator__line-end var--box"></div>
    </div>
  </label>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;
